welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: not found: value estSurbiscuit
if (estSurbiscuit()){
    ^DwarfCode:8: error: not found: value portebiscuit
  portebiscuit()}
  ^