welcome.lessons.welcome.summative.Moria.scala.code

circuit()

def circuit(){
	while(!estSurBiscuit())
  avance()
if (estSurbiscuit()){
  portebiscuit()}
}

def porterBiscuit(){
  prendBiscuit()
  retourne()
  while(!estSurBiscuit())
  avance()
}